<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />
            <!-- Name field -->
            <EditText
                android:id="@+id/title1"
                style="@style/EditorFieldStyle"
                android:hint="@string/title"
                android:inputType="textCapWords" />
            <!-- Label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oname" />
            <!-- Name field -->
            <EditText
                android:id="@+id/orgname"
                style="@style/EditorFieldStyle"
                android:hint="name"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">
                    <!-- Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/oc" />
                    <!-- Name field -->
                    <EditText
                        android:id="@+id/phno"
                        style="@style/EditorFieldStyle"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">
                    <!-- Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/venue" />
                    <!-- Name field -->
                    <EditText
                        android:id="@+id/venue1"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/ce"
                        android:inputType="textCapWords" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">
                    <!-- Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dof" />
                    <!-- Name field -->
                    <TextView
                        android:id="@+id/dob1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="setDate"
                        android:paddingLeft="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">
                    <!-- Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Type" />
                    <!-- Name field -->
                    <Spinner
                        android:id="@+id/spinner_type"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

            </LinearLayout>
            <!-- Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">
                    <!-- Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/est" />
                    <!-- Name field -->
                    <TextView
                        android:id="@+id/start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="setDate"
                        android:paddingLeft="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">
                    <!-- Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eed" />
                    <!-- Name field -->
                    <TextView
                        android:id="@+id/end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="setDate"
                        android:paddingLeft="10dp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <Button

            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>